# wiz-game

./: .gitignore  Cargo.toml  README.md  build_wasm_linux.sh  build_wasm_mac.sh
.github/workflows/: deploy-game.yml
src/: main.rs  scene.rs
src/components/: collider.rs  components.rs  mod.rs  npc.rs  player.rs
src/components/cards/: card.rs  fire_card.rs  mod.rs  water_card.rs
src/states/: card_game_state.rs  mod.rs  player_card_state.rs
src/systems/: mod.rs  physics.rs
