[package]
name = "wizgame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4.4"
serde = { version = "1.0.196", features = ["derive", "rc"] }
rapier2d = { version = "0.18.0", features = ["simd-stable", "wasm-bindgen"] }
